# ssl_tools

./: .buildinfo  .gitignore  README.md  TODO.md  api.html  contributing.html  cpc.ipynb  cpc_version_1.ipynb  cpc_version_mlp.ipynb  data  encodings_jupyter.yaml  epoch_loss.txt  experiments.html  genindex.html  index.html  installation.html  modules.html  objects.inv  out_jupyter.yaml  py-modindex.html  pyproject.toml  requirements.txt  run_tfc.sh  search.html  searchindex.js  ssl_tools.analysis.html  test.py  tfc.ipynb  tfc.py  tfc_2_finetune.py  tfc_2_pretrain.py  tnc.ipynb  tnc_debug.ipynb  tnc_uci_meta4.ipynb  tutorials.html
.github/workflows/: docs.yml
KuHar_cpc/test/: 1004.csv  1019.csv  1030.csv  1033.csv
KuHar_cpc/train/: 1009.csv  1034.csv  1039.csv  1053.csv  1054.csv  1065.csv  1085.csv
TFC-Cirilo/: run.sh  single_run.sh  tfc_2_finetune.py  tfc_2_pretrain.py
TFC-Cirilo/ssl_tools/: dataset_locations.yaml  datasets.py  models.py  utils.py
_modules/: index.html
_sources/: installation.rst.txt
_sources/notebooks/: 01_structuring_input.ipynb.txt  02_training_model.ipynb.txt  03_training_ssl_model.ipynb.txt  04_using_experiments.ipynb.txt  05_covid_anomaly_detection.ipynb.txt
autoapi/ssl_tools/: index.html
checkpoints/tnc/: checkpoint_tnc.tar
ckpt_har/: checkpoint_0.pth.tar
cpc/: cpc.ipynb  cpc_version_1.ipynb
docs/: conf.py  index.rst  tutorials.rst
lightning_logs/version_0/: metrics.csv
lightning_logs/version_2/: metrics.csv
notebooks/: 01_structuring_input.html  01_structuring_input.ipynb  02_training_model.html  02_training_model.ipynb  03_training_ssl_model.html  03_training_ssl_model.ipynb  04_using_experiments.html  04_using_experiments.ipynb  05_covid_anomaly_detection.html  05_covid_anomaly_detection.ipynb
results/: tfc_classifier_b.yaml  tfc_classifier_c.yaml
ssl_tools/: dataset_locations.yaml  models.py  transforms.py
ssl_tools/analysis/: latent_analysis.py  plot_metrics.py
ssl_tools/apps/: __init__.py  common.py  lightning_cli.py  ssl_common.py  ssl_experiment.py
ssl_tools/benchmarks/: README.md  dry_run_all.sh  main_mix_style.py  main_supervised.py  main_supervised_analysis.py  raw_dataset_shapes.yaml  run_benchmark_a1.sh  run_benchmark_a1_raw.sh  simple_trainer.py  test.yaml
ssl_tools/callbacks/: performance.py
ssl_tools/data/: tfc_dataset.py  tnc_dataset.py
ssl_tools/experiments/: README.md  __init__.py  experiment.py  lightning_cli.py  lightning_experiment.py  ssl_experiment.py
ssl_tools/losses/: contrastive_loss.py  nxtent.py
ssl_tools/models/: gru.py  (+1 more)
view_concatenated/: README.md  generator_view_ssl.ipynb  uci_cpc_view.ipynb
weights/: disc_weights.pt  tnc_encoder.pt
(+666 files in other folders)
