[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0"]

[project]
authors = [{ name = "Otavio Napoli", email = "otavio.napoli@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "Self supervised learning tools"
keywords = ["ssl_tools", "self supervised learning", "machine learning"]
license = { file = "LICENSE" }
name = "ssl_tools"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1-dev"

dependencies = [
    "torch",
    "lightning",
    "librep@git+https://github.com/discovery-unicamp/hiaac-librep.git@0.0.4-dev",
    "scipy",
    "plotly",
    "numpy",
    "pandas",
    "PyYAML",
    "statsmodels",
]

[project.optional-dependencies]
dev = ["mock", "pytest", "black", "isort"]

[project.urls]

"Bug Tracker" = "https://github.com/otavioon/ssl_tools/issues"
"Homepage" = "https://github.com/otavioon/ssl_tools"

[tool.setuptools]
py-modules = ["ssl_tools"]

