[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0.0"]

[project]
authors = [{ name = "Otavio Napoli", email = "otavio.napoli@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "Self supervised learning tools"
keywords = ["ssl_tools", "self supervised learning", "machine learning"]
license = { file = "LICENSE" }
name = "ssl_tools"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1-dev"

dependencies = [
    "ipywidgets",
    "librep@git+https://github.com/discovery-unicamp/hiaac-librep.git@0.0.4-dev",
    "lightly",
    "lightning>=2.1.9",
    "mlflow",
    "numpy>=1.23.5",
    "omegaconf",
    "pandas>=2.2.2",
    "perlin-noise>=1.12",
    "plotly>=5.18",
    "PyYAML>=6.0",
    "rich>=13.0",
    "scipy>=1.10",
    "statsmodels>=0.13",
    "tifffile>=2024",
    "timm>=0.9",
    "torch>=2.0.8",
    "torchmetrics>=1.3.0",
    "torchvision>=0.15",
    "zarr>=2.17",
    "imbalanced-learn",
    "gitpython",
    "jsonargparse[all]>=4.27"
]

[project.optional-dependencies]
dev = ["mock", "pytest", "black", "isort"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinx-argparse", "sphinx", "sphinx-autoapi", "nbsphinx", "pandoc", "Ipython"]

[project.urls]

"Bug Tracker" = "https://github.com/otavioon/ssl_tools/issues"
"Homepage" = "https://github.com/otavioon/ssl_tools"

[tool.setuptools]
py-modules = ["ssl_tools"]
